prefetch try on images

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
-    <link rel="preload" as="image" href="/src/pictures/Ancient_Cthulhu_sheet_back.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_2.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_3.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_4.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_5.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_6.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_7.png" />
-    <link rel="preload" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_8.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/Ancient_Cthulhu_sheet_back.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_2.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_3.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_4.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_5.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_6.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_7.png" />
+    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_8.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"></link>
