adding https of png

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/Ancient_Cthulhu_sheet_back.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_1.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_2.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_3.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_4.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_5.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_6.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_7.png" />
-    <link rel="prefetch" as="image" href="/src/pictures/EncounterCards/America/Encounter_Americas_Front_8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.c6b903befbe62fd3aeed.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.f1199397c8007a0b541e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.5d72c1430898fa5fcba9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_4.df8586539f51a024af7c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_5.fb9cdbc2f71c73fa7bc1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_6.8415f247b5855adaa228.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_7.10b84b9dd5e8bb954101.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_8.4e410c36db73eb04ca2e.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"></link>
