added all links to the photos so far

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,6 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/EH_logo.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.c6b903befbe62fd3aeed.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.f1199397c8007a0b541e.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.5d72c1430898fa5fcba9.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_4.df8586539f51a024af7c.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_5.fb9cdbc2f71c73fa7bc1.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_6.8415f247b5855adaa228.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_7.10b84b9dd5e8bb954101.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_8.4e410c36db73eb04ca2e.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet"></link>
@@ -37,6 +28,52 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.jsdelivr.net/gh/nastyox/Rando.js@master/code/plain-javascript/2.0.0/rando-min.js"></script>
     <title>Eldritch Horror</title>
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_logo.59bd7715e880198cddfb.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Azathoth.c87edfd070508b6627ae.jpg" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Yog-Sothoth.50cad0e7c4746875b237.jpg" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Shub-Niggurath.c9876d01702e0a06cb6a.jpg" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu.8de13b3c1e715c288ec1.jpg" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlCharMatt.38edb7e8e5883574e22b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlIcon.0ccffb38d8b0e5a7218f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/CharIcon.2f3e8434d7c730e1d398.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Eldritch_board.0607afda106f917e8ab4.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_front.9df6305e5eb2ed9e18ab.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_mystery.4d93e58650b0e600b755.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Mythos_Card.61fd1e5e2846951c3b88.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas.d0f2f3e154ee48e904d3.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe.867b298c359a78ff6e40.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Asia-Australia.3b52b68a4c91dc4b80f8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General.9736e88d66bb2b61e612.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Other_World.4ced4f8b100300de6f13.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Expedition.2849120c161e8efbf276.png" />
+    <!-- <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Cthulhu_research.23240a7dacf250ff23e2.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Cthulhu_special.7dde0a91afd92fb693be.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlEasy.c1c731f871fcced74b0c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlNormal.39fab74a064bd59dd774.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/LvlHard.0209a94174bb733daa69.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char1.c00684e204f10df5c2cc.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char2.867b2737db149d7f75d5.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char3.1eec303580bf01ffbe30.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char4.a34b89c7d4bf0038a182.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char5.83ea8583da4196491fdf.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char6.0829ffe877057bcf5b5c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char7.7658b72a0b84f81a2e34.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char8.420f8aaa003bb10ae804.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.c6b903befbe62fd3aeed.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.f1199397c8007a0b541e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.5d72c1430898fa5fcba9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_4.df8586539f51a024af7c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_5.fb9cdbc2f71c73fa7bc1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_6.8415f247b5855adaa228.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_7.10b84b9dd5e8bb954101.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_8.4e410c36db73eb04ca2e.png" />
+    <!-- <link rel="preload" as="image" href="" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
