added links for Europe and new links for Americas

--- a/public/index.html
+++ b/public/index.html
@@ -65,15 +65,80 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char7.7658b72a0b84f81a2e34.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Char8.420f8aaa003bb10ae804.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Ancient_Cthulhu_sheet_back.d4690e670f166e9c4603.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.c6b903befbe62fd3aeed.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.f1199397c8007a0b541e.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.5d72c1430898fa5fcba9.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_4.df8586539f51a024af7c.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_5.fb9cdbc2f71c73fa7bc1.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_6.8415f247b5855adaa228.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_7.10b84b9dd5e8bb954101.png" />
-    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_8.4e410c36db73eb04ca2e.png" />
-    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_1.9098007b4303c0722525.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_2.b9d0bfbb6865a0e855c8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_3.c60616715d5bcd5b331f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_4.b0ba758b43f85af94692.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_5.d8ebe68c266ccbc378b4.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_6.0e2b032ad288170c04da.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_7.9472f3ae160ca17f740e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Americas_Front_8.8bba3670fa8644fc83a8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_1.5ed15537fca3a4bb92d7.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_2.ed7c18ac31dc0b69b0a4.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_3.3d92773fbec116c665ca.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_4.61dcdeed34505f0c4e85.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_5.0ce69cdf7f44296eead5.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_6.547e69f1d6d276b018ed.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_7.c9351a18289e119af8eb.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_8.e2e303d6c0ef40f45e54.png" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
