added links for AsiaAustralia, General, OtherWorld, CthulhuResearch and CthulhuSpecial

--- a/public/index.html
+++ b/public/index.html
@@ -81,64 +81,83 @@
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_6.547e69f1d6d276b018ed.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_7.c9351a18289e119af8eb.png" />
     <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_Europe_Front_8.e2e303d6c0ef40f45e54.png" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
-    <link rel="preload" as="image" href="" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_1.44ac4fb69087f926efb1.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_2.34eeb74475413fd9dc90.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_3.a34973861166ec7069af.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_4.fb6b5c86f599c403a322.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_5.67959630bd82ed8b0bbb.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_6.0c9be6e5e6cae1ee39b6.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_7.044068f6b18a3ab4e1c2.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_AsiaAustralia_Front_8.18d79eee0965b0b34db9.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_1.9f7654b2f48ec3fb467b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_2.a1e4b8b365d61c4d3879.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_3.8c437493e0b6e7af994e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_4.3a82a1fee70ef91f71a2.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_5.d35d9b862c62b0cde055.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_6.b4fcef9e297c7da756fe.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_7.6914e477f740f0854219.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_8.b85eef6b26700a7d6afe.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_9.7ca391d069f3192eeb93.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_10.f145719678dd1aaa7042.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_11.6c8dd665fc211b167f6f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_General_Front_12.bd526ec4cc51eea41b3e.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_1.3c4d9f28a79dc585f43f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_2.5901b57ad4086394829b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_3.c9b82f2944d93fae53ac.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_4.d55ab9dfcda8d8801b52.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_5.f291679167d4a06b132b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_6.687250c9e5fef00f11b8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_7.01d44e5c2316479e504a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_8.6480e44e27df26897997.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_9.d8a5624cc6d1f8829a4a.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_10.50d82f24ff96f08e2001.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_11.57ae23440a3132e1c85f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_12.2036df54e4fb174577a5.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_13.8938daf0877260609d65.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_14.a98d33d04da7bf4fe3c8.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_15.97f0b876ea0a6c05442d.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_16.ca51f2bce9ec57465cbf.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_17.63ab656af8a6d97cb5b0.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_18.b1487436b4cd26fd76ad.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_19.dd0719b922acce5a0c98.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_20.aa2e511f642387e838be.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_21.61c3de4354450e1ba9dc.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_22.f0e78ce7b47ff6b93afa.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_23.1ac7eaca2923ef46365b.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_OtherWorld_Front_24.3145e620cb6d3a94e294.png" />
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <!-- <link rel="preload" as="image" href="" /> -->
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_1.29efe200e8bcb0155128.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_2.8ec90f77d38b66ec9a9f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_3.7d503aeaa19d3f4dcd76.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_4.6508fb19c5f5e91166cd.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_5.dffa917b1a6042de4cdc.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_6.94505171f0a4bcad2eda.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_7.56250ff8af5f1b140c80.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuResearch_Front_8.731a9fa3526a4f05073f.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_1.8dd40368539f95b14ee5.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_2.0d8811e725bfe6f86b15.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_3.3c38b1bfab39ebfd213c.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_4.bd886f963371d26976da.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_5.bf3b461040f81e9eb394.png" />
+    <link rel="preload" as="image" href="https://eldritch-horror.onrender.com/static/media/Encounter_CthulhuSpecial_Front_6.f29a938f42ce5914b37a.png" />
+    <!-- <link rel="preload" as="image" href="" /> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
